About us page spacing fixed

--- a/imaginerium/styles/aboutUs.module.css
+++ b/imaginerium/styles/aboutUs.module.css
@@ -1,14 +1,13 @@
 .cardsContainer {
-    align-content: center;
-     margin: 0 auto; 
-     margin-top: 14vh;
-     max-width: 95vw;
-     padding: 10px;
-     margin: 0px;
-     display: grid;
-     grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-     grid-column-gap: 10px;
-     grid-row-gap: 5px;
+    align-content: center; 
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     align-items: center;
+     justify-content: center;
+     gap: 5%;
+     margin-bottom: 10%;
+     
    }
 
 .center {
@@ -21,6 +20,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 7%; 
     height: 25%;
     width: 25%;
     padding: 20px;
@@ -29,7 +29,7 @@
 .headerBlock {
     display: flex;
     text-align: left;
-    margin: 0 250px;
+    margin: 50px 250px;
 }
 
 .headerText {
@@ -54,8 +54,8 @@
     border-radius: 6px;
     overflow: hidden;
     position: relative;
-    margin: 1.5rem;
     font-size: 0.9rem;
+    margin: 10% 0% 0% 0%;
   }
 
 .userCard {
@@ -86,7 +86,7 @@
 }
 
 .general {
-  width: 240px;
+  width: 280px;
   height: 100%;
   position: absolute;
   top: 0;
@@ -118,7 +118,7 @@
   }
 
   /* .additional */.moreInfo {
-    width: 240px;
+    width: 280px;
     float: right;
     position: absolute;
     left: 120px;
